changed bg color, fixed uneven header padding

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,21 +2,22 @@ header {
     justify-content: center;
     text-align: center;
     font-weight: bold;
-    padding: 5px 0px 0px 0px;
+    padding: 5px 0px 10px 0px;
  }
 
 header h1 {
-    margin-top: 10px;
+    margin: 10px 0px 10px 0px;
     font-size: 38px;
     background-color: rgb(0, 45, 102);
     color: white;
-    width: 100%
+    width: 100%;
+    padding-bottom: 5px;
 }
 
 body {
     justify-content: center;
     font-size: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color:rgb(99, 99, 99);
 }
 
 .rep {
